changed format of the action code
actions aren't strict with what state it is. this will be more flexible for future use